UtahLiveDataTest/src/objects/ReviewStepUser__c.object
<CustomObject>
    <description>[Business] Association of a user with the Review Step</description>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PanelCount__c</fullName>
        <label>Panel Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PanelNames__c</fullName>
        <label>Panel Names</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ReviewStep__c</fullName>
        <label>Review Step</label>
        <referenceTo>ReviewStep__c</referenceTo>
        <relationshipLabel>Review Step Users</relationshipLabel>
        <relationshipName>Review_Step_Users</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Review_Step_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Review Step User</label>
    <nameField>
        <displayFormat>RSU-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Review Step Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>